# genai-system-workshop

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
agent/: .env.example  justfile
agent/src/core/: models.py  prompts.py
agent/src/infrastructure/: portfolio_mcp.py
agent/src/scripts/: run_agent.py
rag/: .env.example  Dockerfile  justfile
rag/data/: .gitignore
rag/src/core/: models.py  prompts.py
rag/src/infrastructure/: data_loader.py  embeddings.py  lancedb_store.py  llm.py  observability.py  qdrant_store.py
rag/src/scripts/: __init__.py  populate_lancedb.py  populate_qdrant.py  query_lancedb.py  query_qdrant.py
text2sql/: .env.example  docker-compose.yml  init.sql  justfile
text2sql/src/core/: catalog.py  models.py  prompts.py
text2sql/src/evaluation/: dataset.json
text2sql/src/infrastructure/: database.py  database_mcp.py  sql_validator.py  tracing.py
text2sql/src/scripts/: evaluate.py  run_agent.py
