[project]
name = "genai-system-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lancedb>=0.30.1",
    "langfuse>=4.0.1",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "qdrant-client>=1.17.1",
]
